--- a/src/main/resources/assets/gotwood/lang/en_US.lang
+++ b/src/main/resources/assets/gotwood/lang/en_US.lang
@@ -55,13 +55,13 @@ tile.gotwood.yew_fence_gate.name=Yew Fence Gate
 tile.gotwood.willow_fence_gate.name=Willow Fence Gate
 tile.gotwood.ebony_fence_gate.name=Ebony Fence Gate
 tile.gotwood.fir_fence_gate.name=Fir Fence Gate
-item.gotwood.apple_door.name=Apple Door
-item.gotwood.pine_door.name=Pine Door
-item.gotwood.maple_door.name=Maple Door
-item.gotwood.yew_door.name=Yew Door
-item.gotwood.willow_door.name=Willow Door
-item.gotwood.ebony_door.name=Ebony Door
-item.gotwood.fir_door.name=Fir Door
+item.gotwood.apple_door_item.name=Apple Door
+item.gotwood.pine_door_item.name=Pine Door
+item.gotwood.maple_door_item.name=Maple Door
+item.gotwood.yew_door_item.name=Yew Door
+item.gotwood.willow_door_item.name=Willow Door
+item.gotwood.ebony_door_item.name=Ebony Door
+item.gotwood.fir_door_item.name=Fir Door
 tile.gotwood.apple_trapdoor.name=Apple Trapdoor
 tile.gotwood.pine_trapdoor.name=Pine Trapdoor
 tile.gotwood.maple_trapdoor.name=Maple Trapdoor
