--- a/src/main/resources/assets/gotwood/lang/en_US.lang
+++ b/src/main/resources/assets/gotwood/lang/en_US.lang
@@ -19,6 +19,8 @@ tile.gotwood.fir_slab.name=Fir Slab
 tile.gotwood.fir_log.name=Fir Wood
 tile.gotwood.fir_planks.name=Fir Planks
 tile.gotwood.fir_stairs.name=Fir Stairs
+tile.gotwood.bamboo_stairs.name=Bamboo Stairs
+tile.gotwood.palm_stairs.name=Palm Stairs
 tile.gotwood.ebony_slab.name=Ebony Slab
 tile.gotwood.ebony_log.name=Ebony Wood
 tile.gotwood.ebony_planks.name=Ebony Planks
@@ -26,14 +28,19 @@ tile.gotwood.ebony_stairs.name=Ebony Stairs
 tile.gotwood.pine_slab.name=Pine Slab
 tile.gotwood.pine_log.name=Pine Wood
 tile.gotwood.pine_planks.name=Pine Planks
+tile.gotwood.bamboo_planks.name=Bamboo Planks
+tile.gotwood.palm_planks.name=Palm Planks
 tile.gotwood.pine_stairs.name=Pine Stairs
 tile.gotwood.apple_leaves.name=Apple Leaves
 tile.gotwood.pine_leaves.name=Pine Leaves
+tile.gotwood.rubber_leaves.name=Rubber Leaves
 tile.gotwood.maple_leaves.name=Maple Leaves
 tile.gotwood.yew_leaves.name=Yew Leaves
 tile.gotwood.willow_leaves.name=Willow Leaves
 tile.gotwood.ebony_leaves.name=Ebony Leaves
 tile.gotwood.fir_leaves.name=Fir Leaves
+tile.gotwood.bamboo_leaves.name=Bamboo Leaves
+tile.gotwood.palm_leaves.name=Palm Leaves
 tile.gotwood.apple_fence.name=Apple Fence
 tile.gotwood.pine_fence.name=Pine Fence
 tile.gotwood.maple_fence.name=Maple Fence
@@ -41,6 +48,8 @@ tile.gotwood.yew_fence.name=Yew Fence
 tile.gotwood.willow_fence.name=Willow Fence
 tile.gotwood.ebony_fence.name=Ebony Fence
 tile.gotwood.fir_fence.name=Fir Fence
+tile.gotwood.bamboo_fence.name=Bamboo Fence
+tile.gotwood.palm_fence.name=Palm Fence
 tile.gotwood.apple_sapling.name=Apple Sapling
 tile.gotwood.pine_sapling.name=Pine Sapling
 tile.gotwood.maple_sapling.name=Maple Sapling
@@ -55,12 +64,16 @@ tile.gotwood.yew_fence_gate.name=Yew Fence Gate
 tile.gotwood.willow_fence_gate.name=Willow Fence Gate
 tile.gotwood.ebony_fence_gate.name=Ebony Fence Gate
 tile.gotwood.fir_fence_gate.name=Fir Fence Gate
+tile.gotwood.bamboo_fence_gate.name=Bamboo Fence Gate
+tile.gotwood.palm_fence_gate.name=Palm Fence Gate
 item.gotwood.apple_door_item.name=Apple Door
 item.gotwood.pine_door_item.name=Pine Door
 item.gotwood.maple_door_item.name=Maple Door
 item.gotwood.yew_door_item.name=Yew Door
 item.gotwood.willow_door_item.name=Willow Door
 item.gotwood.ebony_door_item.name=Ebony Door
+item.gotwood.palm_door_item.name=Palm Door
+item.gotwood.bamboo_door_item.name=Bamboo Door
 item.gotwood.fir_door_item.name=Fir Door
 tile.gotwood.apple_trapdoor.name=Apple Trapdoor
 tile.gotwood.pine_trapdoor.name=Pine Trapdoor
@@ -69,10 +82,13 @@ tile.gotwood.yew_trapdoor.name=Yew Trapdoor
 tile.gotwood.willow_trapdoor.name=Willow Trapdoor
 tile.gotwood.ebony_trapdoor.name=Ebony Trapdoor
 tile.gotwood.fir_trapdoor.name=Fir Trapdoor
+tile.gotwood.bamboo_trapdoor.name=Bamboo Trapdoor
+tile.gotwood.palm_trapdoor.name=Palm Trapdoor
 item.gotwood.apple_seed.name=Apple Tree Seeds
 item.gotwood.maple_seed.name=Maple Tree Seed
 item.gotwood.oak_seed.name=Acorn
 item.gotwood.birch_seed.name=Birch Tree Seed
+item.gotwood.bamboo_seed.name=Bamboo Seeds
 item.gotwood.spruce_seed.name=Spruce Cone
 item.gotwood.pine_seed.name=Pine Cone
 item.gotwood.dark_oak_seed.name=Dark Oak Acorn
@@ -84,6 +100,18 @@ item.gotwood.yew_seed.name=Yew Tree Seeds
 item.gotwood.willow_seed.name=Willow Tree Seeds
 itemGroup.gotwood=Got Wood?
 item.gotwood.ash.name=Wood Ash
-
+tile.gotwood.bamboo_sapling.name=Bamboo Sprout
+tile.gotwood.palm_sapling.name=Palm Sapling
+tile.gotwood.rubber_sapling.name=Rubber Sapling
+tile.gotwood.palm_log.name=Palm Wood
+tile.gotwood.bamboo_log.name=Bamboo Shoot
+tile.gotwood.rubber_log.name=Rubber Log
+item.gotwood.rubber_seed.name=Rubber Tree Seeds
+tile.gotwood.block_dates.name=Dates Block
+item.gotwood.maple_sap.name=Bowl of Maple Sap
+item.gotwood.rubber_sap.name=Bowl of Rubber Sap
+item.gotwood.dates.name=Dates
+item.gotwood.bamboo_charcoal.name=Bamboo Charcoal
+item.gotwood.bamboo_pole.name=Bamboo Pole
 
 \ No newline at end of file
