--- a/src/main/resources/assets/gotwood/lang/en_US.lang
+++ b/src/main/resources/assets/gotwood/lang/en_US.lang
@@ -1,36 +1,36 @@
 @@ -0,0 +1,7 @@
-tile.gotwood.apple_slab.name=Apple Slab
+tile.gotwood.apple_slab.name=Apple Wood Slab
 tile.gotwood.apple_log.name=Apple Wood
-tile.gotwood.apple_planks.name=Apple Planks
-tile.gotwood.apple_stairs.name=Apple Stairs
-tile.gotwood.maple_slab.name=Maple Slab
+tile.gotwood.apple_planks.name=Apple Wood Planks
+tile.gotwood.apple_stairs.name=Apple Wood Stairs
+tile.gotwood.maple_slab.name=Maple Wood Slab
 tile.gotwood.maple_log.name=Maple Wood
-tile.gotwood.maple_planks.name=Maple Planks
-tile.gotwood.maple_stairs.name=Maple Stairs
-tile.gotwood.willow_slab.name=Willow Slab
+tile.gotwood.maple_planks.name=Maple Wood Planks
+tile.gotwood.maple_stairs.name=Maple Wood Stairs
+tile.gotwood.willow_slab.name=Willow Wood Slab
 tile.gotwood.willow_log.name=Willow Wood
-tile.gotwood.willow_planks.name=Willow Planks
-tile.gotwood.willow_stairs.name=Willow Stairs
-tile.gotwood.yew_slab.name=Yew Slab
+tile.gotwood.willow_planks.name=Willow Wood Planks
+tile.gotwood.willow_stairs.name=Willow Wood Stairs
+tile.gotwood.yew_slab.name=Yew Wood Slab
 tile.gotwood.yew_log.name=Yew Wood
-tile.gotwood.yew_planks.name=Yew Planks
-tile.gotwood.yew_stairs.name=Yew Stairs
-tile.gotwood.fir_slab.name=Fir Slab
+tile.gotwood.yew_planks.name=Yew Wood Planks
+tile.gotwood.yew_stairs.name=Yew Wood Stairs
+tile.gotwood.fir_slab.name=Fir Wood Slab
 tile.gotwood.fir_log.name=Fir Wood
-tile.gotwood.fir_planks.name=Fir Planks
-tile.gotwood.fir_stairs.name=Fir Stairs
-tile.gotwood.bamboo_stairs.name=Bamboo Stairs
-tile.gotwood.palm_stairs.name=Palm Stairs
-tile.gotwood.ebony_slab.name=Ebony Slab
+tile.gotwood.fir_planks.name=Fir Wood Planks
+tile.gotwood.fir_stairs.name=Fir Wood Stairs
+tile.gotwood.bamboo_stairs.name=Bamboo Wood Stairs
+tile.gotwood.palm_stairs.name=Palm Wood Stairs
+tile.gotwood.ebony_slab.name=Ebony Wood Slab
 tile.gotwood.ebony_log.name=Ebony Wood
-tile.gotwood.ebony_planks.name=Ebony Planks
-tile.gotwood.ebony_stairs.name=Ebony Stairs
-tile.gotwood.pine_slab.name=Pine Slab
+tile.gotwood.ebony_planks.name=Ebony Wood Planks
+tile.gotwood.ebony_stairs.name=Ebony Wood Stairs
+tile.gotwood.pine_slab.name=Pine Wood Slab
 tile.gotwood.pine_log.name=Pine Wood
-tile.gotwood.pine_planks.name=Pine Planks
-tile.gotwood.bamboo_planks.name=Bamboo Planks
-tile.gotwood.palm_planks.name=Palm Planks
-tile.gotwood.pine_stairs.name=Pine Stairs
+tile.gotwood.pine_planks.name=Pine Wood Planks
+tile.gotwood.bamboo_planks.name=Bamboo Wood Planks
+tile.gotwood.palm_planks.name=Palm Wood Planks
+tile.gotwood.pine_stairs.name=Pine Wood Stairs
 tile.gotwood.apple_leaves.name=Apple Leaves
 tile.gotwood.pine_leaves.name=Pine Leaves
 tile.gotwood.rubber_leaves.name=Rubber Leaves
@@ -113,5 +113,7 @@ item.gotwood.rubber_sap.name=Bowl of Rubber Sap
 item.gotwood.dates.name=Dates
 item.gotwood.bamboo_charcoal.name=Bamboo Charcoal
 item.gotwood.bamboo_pole.name=Bamboo Pole
+tile.gotwood.bamboo_slab.name=Bamboo Wood Slab
+tile.gotwood.palm_slab.name=Palm Wood Slab
 
 \ No newline at end of file
